--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
     <data>
+        <variable
+            name="vm"
+            type="xyz.slkagura.ui.view.main.MainViewModel"
+            />
+        <variable
+            name="handler"
+            type="xyz.slkagura.ui.view.main.MainViewModel.Handler"
+            />
     </data>
-    <FrameLayout
-        android:id="@+id/main_container"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/activity_main_cl_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         >
-        <androidx.appcompat.widget.AppCompatTextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="container"
+        <Button
+            android:id="@+id/activity_main_btn_thread"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Start"
+            android:onClick="@{() -> handler.onStartClick()}"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             />
-    </FrameLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
