--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,12 +5,12 @@
     >
     <data>
         <variable
-            name="vm"
-            type="xyz.slkagura.ui.view.main.MainViewModel"
+            name="v"
+            type="xyz.slkagura.ui.view.main.MainActivity"
             />
         <variable
-            name="handler"
-            type="xyz.slkagura.ui.view.main.MainViewModel.Handler"
+            name="vm"
+            type="xyz.slkagura.ui.view.main.MainViewModel"
             />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -19,15 +19,26 @@
         android:layout_height="match_parent"
         >
         <Button
-            android:id="@+id/activity_main_btn_thread"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Start"
-            android:onClick="@{() -> handler.onStartClick()}"
+            android:id="@+id/activity_main_btn_camera"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
             android:layout_marginStart="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            android:onClick="@{() -> v.onCameraClick()}"
+            android:text="Camera"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+        <Button
+            android:id="@+id/activity_main_btn_codec"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="8dp"
+            android:onClick="@{() -> v.onCodecClick()}"
+            android:text="Codec"
+            app:layout_constraintBottom_toBottomOf="@id/activity_main_btn_camera"
+            app:layout_constraintStart_toEndOf="@id/activity_main_btn_camera"
+            app:layout_constraintTop_toTopOf="@id/activity_main_btn_camera"
             />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
