--- a/app/src/main/res/drawable/drawable_bg_default_btn.xml
+++ b/app/src/main/res/drawable/drawable_bg_default_btn.xml
@@ -3,13 +3,12 @@
     <item>
         <layer-list>
             <item>
-                <shape
-                    xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:shape="rectangle"
-                    >
+                <shape xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:shape="rectangle">
                     <corners android:radius="4dp" />
                     <solid android:color="@color/white" />
-                    <stroke android:color="@color/black" android:width="1dp" />
+                    <stroke android:width="1dp"
+                        android:color="@color/black" />
                 </shape>
             </item>
         </layer-list>
