--- a/app/src/main/res/drawable/drawable_bg_white_radius_4_stroke.xml
+++ b/app/src/main/res/drawable/drawable_bg_white_radius_4_stroke.xml
@@ -5,5 +5,8 @@
     >
     <corners android:radius="4dp" />
     <solid android:color="@color/white" />
-    <stroke android:color="@color/black" android:width="1dp" />
+    <stroke
+        android:width="1dp"
+        android:color="@color/black"
+        />
 </shape>
