--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,5 +52,18 @@
             app:layout_constraintStart_toEndOf="@id/activity_main_btn_codec"
             app:layout_constraintTop_toTopOf="@id/activity_main_btn_camera"
             />
+        <!-- 第二行 -->
+        <Button
+            android:id="@+id/activity_main_btn_multi"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="8dp"
+            android:onClick="@{() -> v.onMultiClick()}"
+            android:text="Multi"
+            android:textSize="14sp"
+            app:layout_constraintTop_toBottomOf="@id/activity_main_btn_camera"
+            app:layout_constraintStart_toStartOf="@id/activity_main_btn_camera"
+            app:layout_constraintEnd_toEndOf="@id/activity_main_btn_camera"
+            />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
