--- a/app/src/main/res/drawable/drawable_bg_default_btn.xml
+++ b/app/src/main/res/drawable/drawable_bg_default_btn.xml
@@ -1,16 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_pressed="true">
+        <shape android:shape="rectangle">
+            <corners android:radius="4dp" />
+            <solid android:color="@color/black" />
+        </shape>
+    </item>
+    <item android:state_pressed="false">
+        <shape android:shape="rectangle">
+            <corners android:radius="4dp" />
+            <solid android:color="@color/white" />
+            <stroke android:width="1dp"
+                android:color="@color/black" />
+        </shape>
+    </item>
     <item>
-        <layer-list>
-            <item>
-                <shape xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:shape="rectangle">
-                    <corners android:radius="4dp" />
-                    <solid android:color="@color/white" />
-                    <stroke android:width="1dp"
-                        android:color="@color/black" />
-                </shape>
-            </item>
-        </layer-list>
+        <shape android:shape="rectangle">
+            <corners android:radius="4dp" />
+            <solid android:color="@color/white" />
+            <stroke android:width="1dp"
+                android:color="@color/black" />
+        </shape>
     </item>
 </selector>
